# video-research-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pyproject.toml
.claude-plugin/: plugin.json
.claude/rules/: git.md
.github/workflows/: ci.yml  claude.yml
agents/: comment-analyst.md  gr-advisor.md  researcher.md
commands/: advisor.md  doctor.md  explain-status.md  explainer.md  getting-started.md  ingest.md  models.md  recall.md  research-deep.md  research.md
docs/: ARCHITECTURE.md  DIAGRAMS.md  KNOWLEDGE_INGEST_UX_FINDINGS.md  PLUGIN_DISTRIBUTION.md  PR_PLAN.md  RELEASE_CHECKLIST.md  update-plugin.md
docs/metrics/: README.md  installer-state-matrix.json  tool-contract-manifest.json
docs/tutorials/: ADDING_A_TOOL.md  GETTING_STARTED.md  KNOWLEDGE_STORE.md  LIVE_SECURITY_VALIDATION.md  WRITING_TESTS.md
ops/review-cycle/: final-report.md  fix-playbook.md  iteration-01-report.md  iteration-02-report.md  iteration-03-report.md  (+11 more)
scripts/: codex_cloud_maintenance.sh  codex_cloud_setup.sh  export_installer_state_matrix.py  export_tool_contract_manifest.py  migrate_cloud_to_local.py  restore_cloud_references.py  revectorize_openai.py  run_live_tool_security_checks.py  run_security_smoke.sh
tests/: adversarial_inputs.py  test_cache.py  test_config.py  test_content_batch_tools.py  test_content_prompts.py  test_content_tools.py  test_context_cache.py  test_errors.py  test_infra_tools.py  test_installer_state_matrix_script.py  test_knowledge_schema.py  test_knowledge_summarize.py  test_knowledge_tools.py  test_policy_inheritance.py  test_research_document_file.py  test_research_document_prompts.py  test_research_document_tools.py  test_research_tools.py  test_research_web_tools.py  test_tracing.py  test_url_policy.py  test_video_file.py  test_video_tools.py  test_weaviate_client.py  test_weaviate_migrate.py  test_weaviate_schema.py
(+50 files in other folders)
