[project]
name = "video-research-mcp"
version = "0.4.1"
description = "Unified Gemini research partner — 45 tools for video analysis, deep research, content extraction, and explainer video creation via MCP"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fausto" }]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "fastmcp>=3.0.2",
    "google-api-python-client>=2.100",
    "google-genai>=1.57",
    "httpx>=0.27",
    "pydantic>=2.0",
    "weaviate-client>=4.19.2",
]

[project.urls]
Homepage = "https://github.com/Galbaz1/video-research-mcp"
Repository = "https://github.com/Galbaz1/video-research-mcp"
Documentation = "https://github.com/Galbaz1/video-research-mcp/tree/main/docs"
Issues = "https://github.com/Galbaz1/video-research-mcp/issues"
Changelog = "https://github.com/Galbaz1/video-research-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
tracing = ["mlflow-tracing>=3.0"]
agents = ["weaviate-agents>=1.2.0"]
strict = ["jsonschema>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9",
    "mlflow-tracing>=3.0",
    "jsonschema>=4.0",
]

[project.scripts]
video-research-mcp = "video_research_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_research_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
